; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_seafile-config.c_get_value.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_seafile-config.c_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @get_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_value(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i8**
  store i8** %7, i8*** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @sqlite3_column_text(i32* %8, i32 0)
  %10 = inttoptr i64 %9 to i8*
  %11 = call i8* @g_strdup(i8* %10)
  %12 = load i8**, i8*** %5, align 8
  store i8* %11, i8** %12, align 8
  %13 = load i32, i32* @FALSE, align 4
  ret i32 %13
}

declare dso_local i8* @g_strdup(i8*) #1

declare dso_local i64 @sqlite3_column_text(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
